src/main/java/com/example/githubrepos/api/error/dto/BadContentTypeExceptionResponseDTO.java
package com.example.githubrepos.api.error.dto;

import org.springframework.http.HttpStatus;

public record BadContentTypeExceptionResponseDTO(HttpStatus status, String message) {
}
